Remove obsolete documentation and gRPC/protobuf files related to user, message, and presence services to streamline the codebase and improve maintainability.

--- a/docs/dev/01-用户登录与操作逻辑.md
+++ b/docs/dev/01-用户登录与操作逻辑.md
@@ -2,11 +2,95 @@
 
 ## 概述
 
-本文档详细说明 IM 系统中用户登录、认证、以及各种操作（发送消息、接收消息、查询历史等）的完整流程和逻辑。
+本文档详细说明 IM 系统中用户注册、登录、认证、以及各种操作（发送消息、接收消息、查询历史等）的完整流程和逻辑。
 
-## 用户认证流程
+## 用户注册流程
 
-### 1. 用户登录流程
+### 1. 注册流程
+
+```mermaid
+sequenceDiagram
+    participant Client as 客户端
+    participant Gateway as WebSocket Gateway
+    participant UserSvc as User Service (gRPC)
+    participant AuthSvc as Auth Service (gRPC)
+    participant DB as 数据库
+    participant Redis as Redis
+    
+    Client->>Gateway: HTTP POST /api/v1/user/register<br/>{nickname, avatar, email, description, password}
+    Gateway->>UserSvc: gRPC: Register(req)
+    UserSvc->>DB: 检查邮箱是否已存在
+    alt 邮箱已存在
+        UserSvc-->>Gateway: 返回错误
+        Gateway-->>Client: 返回 409 Conflict
+    else 邮箱不存在
+        UserSvc->>UserSvc: 生成盐值和密码哈希
+        UserSvc->>DB: 创建用户记录
+        DB-->>UserSvc: 返回用户ID
+        UserSvc-->>Gateway: 返回 user_id
+        Gateway-->>Client: 返回 user_id
+        
+        Note over Client,AuthSvc: 注册后自动登录
+        Client->>Gateway: HTTP POST /api/v1/auth/login<br/>{id: user_id, password}
+        Gateway->>AuthSvc: gRPC: Login(id, password)
+        AuthSvc->>UserSvc: gRPC: GetUserByID(id)
+        UserSvc->>DB: 查询用户信息
+        DB-->>UserSvc: 返回用户数据
+        UserSvc-->>AuthSvc: 返回用户信息（含密码哈希）
+        AuthSvc->>AuthSvc: 验证密码哈希
+        AuthSvc->>AuthSvc: 生成 JWT Token
+        AuthSvc->>Redis: 缓存 Token 信息
+        AuthSvc-->>Gateway: 返回 Token + 用户信息
+        Gateway-->>Client: 返回 Token + Refresh Token
+    end
+```
+
+### 2. 注册实现要点
+
+**User Service Register RPC**：
+
+```go
+func (s *Service) Register(ctx context.Context, req *pb.RegisterRequest) (*pb.RegisterResponse, error) {
+    // 1. 检查邮箱是否已存在
+    var existingUser model.User
+    if err := db.DB.Where("email = ?", req.Email).First(&existingUser).Error; err == nil {
+        return nil, status.Error(codes.AlreadyExists, "email already exists")
+    }
+    
+    // 2. 生成盐值和密码哈希
+    salt, err := s.generateSalt()
+    if err != nil {
+        return nil, status.Error(codes.Internal, "failed to generate salt")
+    }
+    
+    passwordHash := s.hashPassword(req.Password, salt)
+    
+    // 3. 创建用户
+    user := &model.User{
+        ID:           uuid.New().String(),
+        Nickname:     req.Nickname,
+        Avatar:       req.Avatar,
+        Email:        req.Email,
+        Description:  req.Description,
+        Salt:         salt,
+        PasswordHash: passwordHash,
+        Level:        0,  // 普通用户
+        Status:       "offline",
+    }
+    
+    if err := db.DB.Create(user).Error; err != nil {
+        return nil, status.Error(codes.Internal, "failed to create user")
+    }
+    
+    return &pb.RegisterResponse{
+        Id: user.ID,
+    }, nil
+}
+```
+
+## 用户登录流程
+
+### 1. 登录流程
 
 ```mermaid
 sequenceDiagram
@@ -19,30 +103,38 @@ sequenceDiagram
     participant ConnMgr as Connection Manager
     participant PresenceSvc as Presence Service
     
-    Client->>Gateway: HTTP POST /api/v1/auth/login<br/>{username, password}
-    Gateway->>AuthSvc: gRPC: Login(username, password)
-    AuthSvc->>UserSvc: gRPC: GetUserByUsername(username)
+    Client->>Gateway: HTTP POST /api/v1/auth/login<br/>{id, password}
+    Gateway->>AuthSvc: gRPC: Login(id, password)
+    AuthSvc->>UserSvc: gRPC: GetUserByID(id)
     UserSvc->>DB: 查询用户信息
     DB-->>UserSvc: 返回用户数据
-    UserSvc-->>AuthSvc: 返回用户信息
+    UserSvc-->>AuthSvc: 返回用户信息（含密码哈希和盐值）
     AuthSvc->>AuthSvc: 验证密码哈希
     alt 验证成功
-        AuthSvc->>AuthSvc: 生成 JWT Token
-        AuthSvc->>Redis: 缓存 Token 信息
-        AuthSvc-->>Gateway: 返回 Token + 用户信息
-        Gateway-->>Client: 返回 Token
-        Client->>Gateway: WebSocket 连接请求<br/>Header: Authorization: Bearer {token}
-        Gateway->>AuthSvc: gRPC: ValidateToken(token)
-        AuthSvc->>Redis: 检查 Token 缓存/黑名单
-        alt Token 有效
-            AuthSvc-->>Gateway: 返回用户ID和用户信息
-            Gateway->>ConnMgr: RegisterConnection(userID, conn)
-            Gateway->>PresenceSvc: gRPC: UserOnline(userID)
-            Gateway->>Gateway: 查询并推送离线消息
-            Gateway-->>Client: WebSocket 连接建立成功
-        else Token 无效
+        AuthSvc->>AuthSvc: 检查用户状态（是否被冻结）
+        alt 用户正常
+            AuthSvc->>AuthSvc: 生成 JWT Token 和 Refresh Token
+            AuthSvc->>Redis: 缓存 Token 信息
+            AuthSvc-->>Gateway: 返回 Token + Refresh Token + 用户信息
+            Gateway-->>Client: 返回 Token + Refresh Token + 用户信息
+            
+            Note over Client,PresenceSvc: WebSocket 连接建立
+            Client->>Gateway: WebSocket 连接请求<br/>Header: Authorization: Bearer {token}
+            Gateway->>AuthSvc: gRPC: ValidateToken(token)
+            AuthSvc->>Redis: 检查 Token 缓存/黑名单
+            alt Token 有效
+                AuthSvc-->>Gateway: 返回用户ID和用户信息
+                Gateway->>ConnMgr: RegisterConnection(userID, conn)
+                Gateway->>PresenceSvc: gRPC: UserOnline(id)
+                Gateway->>Gateway: 查询并推送离线消息
+                Gateway-->>Client: WebSocket 连接建立成功
+            else Token 无效
+                AuthSvc-->>Gateway: 返回错误
+                Gateway-->>Client: 返回 401 Unauthorized
+            end
+        else 用户被冻结
             AuthSvc-->>Gateway: 返回错误
-            Gateway-->>Client: 返回 401 Unauthorized
+            Gateway-->>Client: 返回 403 Forbidden
         end
     else 验证失败
         AuthSvc-->>Gateway: 返回错误
@@ -52,72 +144,58 @@ sequenceDiagram
 
 ### 2. 认证实现要点
 
-#### JWT Token 生成（Auth Service）
+#### Auth Service Login RPC
 
 ```go
-// internal/service/auth/auth.go
-package auth
-
-import (
-    "github.com/golang-jwt/jwt/v5"
-    "time"
-    "github.com/redis/go-redis/v9"
-)
-
-type Claims struct {
-    UserID   string `json:"user_id"`
-    Username string `json:"username"`
-    jwt.RegisteredClaims
-}
-
-func (s *Service) GenerateToken(userID, username string) (string, error) {
-    claims := &Claims{
-        UserID:   userID,
-        Username: username,
-        RegisteredClaims: jwt.RegisteredClaims{
-            ExpiresAt: jwt.NewNumericDate(time.Now().Add(time.Duration(s.config.JWT.ExpireHours) * time.Hour)),
-            IssuedAt:  jwt.NewNumericDate(time.Now()),
-            NotBefore: jwt.NewNumericDate(time.Now()),
+// internal/service/auth/service.go
+func (s *Service) Login(ctx context.Context, req *pb.LoginRequest) (*pb.LoginResponse, error) {
+    // 1. 调用 User Service 获取用户信息（包含密码哈希和盐值）
+    userReq := &userpb.GetUserByIDRequest{Id: req.Id}
+    userResp, err := s.userService.GetUserByID(ctx, userReq)
+    if err != nil {
+        return nil, status.Error(codes.Unauthenticated, "invalid credentials")
+    }
+    
+    // 2. 验证密码
+    passwordHash := s.hashPassword(req.Password, userResp.Salt)
+    if passwordHash != userResp.PasswordHash {
+        return nil, status.Error(codes.Unauthenticated, "invalid credentials")
+    }
+    
+    // 3. 检查用户状态
+    if userResp.User.Status == "frozen" || !userResp.User.FreezeTime.IsZero() {
+        return nil, status.Error(codes.PermissionDenied, "user is frozen")
+    }
+    
+    // 4. 生成 Token
+    token, err := s.generateToken(userResp.User.Id, userResp.User.Email)
+    if err != nil {
+        return nil, status.Error(codes.Internal, "failed to generate token")
+    }
+    
+    // 5. 生成 Refresh Token
+    refreshToken, err := s.generateRefreshToken(userResp.User.Id)
+    if err != nil {
+        return nil, status.Error(codes.Internal, "failed to generate refresh token")
+    }
+    
+    // 6. 缓存 Token 信息
+    s.cacheToken(token, userResp.User.Id)
+    
+    return &pb.LoginResponse{
+        Token:        token,
+        RefreshToken: refreshToken,
+        ExpiresAt:    time.Now().Add(time.Duration(s.config.JWT.ExpireHours) * time.Hour).Unix(),
+        User: &pb.UserInfo{
+            Id:          userResp.User.Id,
+            Nickname:    userResp.User.Nickname,
+            Avatar:      userResp.User.Avatar,
+            Email:       userResp.User.Email,
+            Description: userResp.User.Description,
+            Level:       userResp.User.Level,
+            Status:      userResp.User.Status,
         },
-    }
-    
-    token := jwt.NewWithClaims(jwt.SigningMethodHS256, claims)
-    tokenString, err := token.SignedString([]byte(s.config.JWT.Secret))
-    if err != nil {
-        return "", err
-    }
-    
-    // 缓存 Token 信息到 Redis
-    cacheKey := fmt.Sprintf("token:%s", tokenString)
-    s.redis.Set(ctx, cacheKey, userID, time.Duration(s.config.JWT.ExpireHours)*time.Hour)
-    
-    return tokenString, nil
-}
-
-func (s *Service) ValidateToken(tokenString string) (*Claims, error) {
-    // 1. 检查 Redis 黑名单
-    blacklistKey := fmt.Sprintf("token:blacklist:%s", tokenString)
-    exists, _ := s.redis.Exists(ctx, blacklistKey).Result()
-    if exists > 0 {
-        return nil, fmt.Errorf("token is blacklisted")
-    }
-    
-    // 2. 验证 JWT 签名和过期时间
-    token, err := jwt.ParseWithClaims(tokenString, &Claims{}, func(token *jwt.Token) (interface{}, error) {
-        return []byte(s.config.JWT.Secret), nil
-    })
-    
-    if err != nil {
-        return nil, err
-    }
-    
-    if claims, ok := token.Claims.(*Claims); ok && token.Valid {
-        // 3. 可选：检查用户状态（如果需要）
-        // 这里可以调用 User Service 查询用户状态
-        return claims, nil
-    }
-    
-    return nil, fmt.Errorf("invalid token")
+    }, nil
 }
 ```
 
@@ -134,10 +212,7 @@ func (h *Handler) HandleConnection(w http.ResponseWriter, r *http.Request) {
     }
     
     // 调用 Auth Service 验证 Token
-    req := &pb.ValidateTokenRequest{
-        Token: token,
-    }
-    
+    req := &pb.ValidateTokenRequest{Token: token}
     resp, err := h.authService.ValidateToken(context.Background(), req)
     if err != nil || !resp.Valid {
         http.Error(w, "Invalid token", http.StatusUnauthorized)
@@ -152,13 +227,13 @@ func (h *Handler) HandleConnection(w http.ResponseWriter, r *http.Request) {
     }
     
     // 注册连接
-    connection := h.connMgr.RegisterConnection(resp.UserId, conn)
+    connection := h.connMgr.RegisterConnection(resp.Id, conn)
     
     // 通知用户上线
-    h.presenceService.UserOnline(resp.UserId)
+    h.presenceService.UserOnline(&presencepb.UserOnlineRequest{Id: resp.Id})
     
     // 处理连接
-    go h.handleClient(connection, resp.UserId)
+    go h.handleClient(connection, resp.Id)
 }
 
 func extractToken(r *http.Request) string {
@@ -188,10 +263,9 @@ sequenceDiagram
     participant Consumer as MQ Consumer
     participant TargetClient as 目标客户端
     
-    Client->>Gateway: WebSocket: SendMessage<br/>{type: "single", to: "user123", content: "Hello"}
+    Client->>Gateway: WebSocket: SendMessage<br/>{type: "send_message", to_id: "user123", content: "Hello", message_type: "text"}
     Gateway->>Gateway: 验证消息格式
-    Gateway->>MsgSvc: gRPC: SendMessage(req)
-    Note over MsgSvc: req.FromUserID = 当前用户ID<br/>req.ToUserID = "user123"<br/>req.Content = "Hello"
+    Gateway->>MsgSvc: gRPC: SendMessage(from_id, to_id, content, message_type)
     MsgSvc->>DB: 保存消息记录
     DB-->>MsgSvc: 返回消息ID
     MsgSvc->>MQ: PublishSingleChatMessage<br/>exchange: "im.direct"<br/>routing: "user.user123"
@@ -213,39 +287,11 @@ sequenceDiagram
 
 ```go
 // internal/gateway/websocket/handler.go
-func (h *Handler) handleClient(conn *connection.Connection, userID string) {
-    defer func() {
-        h.connMgr.UnregisterConnection(userID, conn.ID)
-        h.presenceService.UserOffline(userID)
-        conn.Close()
-    }()
-    
-    for {
-        var msg Message
-        err := conn.ReadJSON(&msg)
-        if err != nil {
-            log.Printf("Read error: %v", err)
-            break
-        }
-        
-        switch msg.Type {
-        case "send_message":
-            h.handleSendMessage(conn, userID, &msg)
-        case "get_history":
-            h.handleGetHistory(conn, userID, &msg)
-        case "ping":
-            h.handlePing(conn)
-        default:
-            h.sendError(conn, "unknown message type")
-        }
-    }
-}
-
-func (h *Handler) handleSendMessage(conn *connection.Connection, fromUserID string, msg *Message) {
+func (h *Handler) handleSendMessage(conn *connection.Connection, fromID string, msg *Message) {
     // 构建 gRPC 请求
     req := &pb.SendMessageRequest{
-        FromUserID: fromUserID,
-        ToUserID:   msg.Data["to_user_id"].(string),
+        FromId:     fromID,
+        ToId:       msg.Data["to_id"].(string),
         Content:    msg.Data["content"].(string),
         MessageType: msg.Data["message_type"].(string), // text, image, file
     }
@@ -253,7 +299,7 @@ func (h *Handler) handleSendMessage(conn *connection.Connection, fromUserID stri
     // 调用 Message Service
     resp, err := h.messageService.SendMessage(context.Background(), req)
     if err != nil {
-        h.sendError(conn, err.Error())
+        h.sendError(conn, "MESSAGE_SEND_FAILED", err.Error())
         return
     }
     
@@ -262,7 +308,7 @@ func (h *Handler) handleSendMessage(conn *connection.Connection, fromUserID stri
         Type: "message_sent",
         Data: map[string]interface{}{
             "message_id": resp.MessageId,
-            "timestamp":  resp.Timestamp,
+            "created_at":  resp.CreatedAt,
         },
     })
 }
@@ -280,8 +326,8 @@ sequenceDiagram
     participant Consumer as MQ Consumer
     participant Members as 群组成员客户端
     
-    Client->>Gateway: WebSocket: SendGroupMessage<br/>{type: "group", group_id: "group1", content: "Hello all"}
-    Gateway->>MsgSvc: gRPC: SendGroupMessage(req)
+    Client->>Gateway: WebSocket: SendGroupMessage<br/>{type: "send_group_message", group_id: "group1", content: "Hello all"}
+    Gateway->>MsgSvc: gRPC: SendGroupMessage(from_id, group_id, content, message_type)
     MsgSvc->>DB: 查询群组信息
     MsgSvc->>DB: 保存消息记录
     MsgSvc->>MQ: PublishGroupMessage<br/>exchange: "im.topic"<br/>routing: "group.group1"
@@ -298,56 +344,6 @@ sequenceDiagram
     Consumer->>DB: 标记离线成员消息为未读
 ```
 
-#### 代码实现
-
-```go
-// internal/service/message/service.go
-func (s *Service) SendGroupMessage(ctx context.Context, req *pb.SendGroupMessageRequest) (*pb.SendGroupMessageResponse, error) {
-    // 验证用户是否在群组中
-    isMember, err := s.groupService.IsMember(ctx, req.GroupID, req.FromUserID)
-    if err != nil || !isMember {
-        return nil, fmt.Errorf("user is not a member of the group")
-    }
-    
-    // 保存消息到数据库
-    message := &model.Message{
-        ID:          uuid.New().String(),
-        Type:        "group",
-        FromUserID:   req.FromUserID,
-        GroupID:      req.GroupID,
-        Content:      req.Content,
-        MessageType:  req.MessageType,
-        Status:       "sent",
-        CreatedAt:    time.Now(),
-    }
-    
-    if err := s.db.Create(message).Error; err != nil {
-        return nil, err
-    }
-    
-    // 发送到消息队列
-    pbMessage := &pb.Message{
-        Id:          message.ID,
-        Type:        "group",
-        FromUserID:  req.FromUserID,
-        GroupID:     req.GroupID,
-        Content:     req.Content,
-        MessageType: req.MessageType,
-        Timestamp:   message.CreatedAt.Unix(),
-    }
-    
-    if err := s.mqProducer.PublishGroupMessage(req.GroupID, pbMessage); err != nil {
-        log.Printf("Failed to publish group message: %v", err)
-        // 即使 MQ 失败，消息已保存到数据库，可以后续重试
-    }
-    
-    return &pb.SendGroupMessageResponse{
-        MessageId: message.ID,
-        Timestamp: message.CreatedAt.Unix(),
-    }, nil
-}
-```
-
 ### 3. 查询消息历史
 
 ```mermaid
@@ -357,53 +353,32 @@ sequenceDiagram
     participant MsgSvc as Message Service
     participant DB as 数据库
     
-    Client->>Gateway: WebSocket: GetHistory<br/>{type: "single", user_id: "user123", limit: 50, offset: 0}
-    Gateway->>MsgSvc: gRPC: GetMessageHistory(req)
-    MsgSvc->>DB: 查询消息历史<br/>WHERE (from_user_id=? AND to_user_id=?)<br/>OR (from_user_id=? AND to_user_id=?)<br/>ORDER BY created_at DESC<br/>LIMIT 50 OFFSET 0
+    Client->>Gateway: WebSocket: GetMessageHistory<br/>{type: "get_history", target_user_id: "user123", limit: 50, offset: 0}
+    Gateway->>MsgSvc: gRPC: GetMessageHistory(id, target_user_id, limit, offset)
+    MsgSvc->>DB: 查询消息历史<br/>WHERE (from_id=? AND to_id=?)<br/>OR (from_id=? AND to_id=?)<br/>ORDER BY created_at DESC<br/>LIMIT 50 OFFSET 0
     DB-->>MsgSvc: 返回消息列表
     MsgSvc-->>Gateway: 返回消息列表
     Gateway-->>Client: WebSocket 返回消息列表
 ```
 
-#### 代码实现
+### 4. 获取会话列表
 
-```go
-// internal/service/message/service.go
-func (s *Service) GetMessageHistory(ctx context.Context, req *pb.GetMessageHistoryRequest) (*pb.GetMessageHistoryResponse, error) {
-    var messages []model.Message
+```mermaid
+sequenceDiagram
+    participant Client as 客户端
+    participant Gateway as WebSocket Gateway
+    participant MsgSvc as Message Service
+    participant DB as 数据库
     
-    query := s.db.Where("(from_user_id = ? AND to_user_id = ?) OR (from_user_id = ? AND to_user_id = ?)",
-        req.UserID, req.TargetUserID, req.TargetUserID, req.UserID).
-        Where("type = ?", "single").
-        Order("created_at DESC").
-        Limit(int(req.Limit)).
-        Offset(int(req.Offset))
-    
-    if err := query.Find(&messages).Error; err != nil {
-        return nil, err
-    }
-    
-    // 转换为 protobuf 格式
-    pbMessages := make([]*pb.Message, len(messages))
-    for i, msg := range messages {
-        pbMessages[i] = &pb.Message{
-            Id:          msg.ID,
-            Type:        msg.Type,
-            FromUserID:  msg.FromUserID,
-            ToUserID:    msg.ToUserID,
-            Content:     msg.Content,
-            MessageType: msg.MessageType,
-            Timestamp:   msg.CreatedAt.Unix(),
-        }
-    }
-    
-    return &pb.GetMessageHistoryResponse{
-        Messages: pbMessages,
-    }, nil
-}
+    Client->>Gateway: WebSocket: GetConversations<br/>{type: "get_conversations", limit: 50, offset: 0}
+    Gateway->>MsgSvc: gRPC: GetConversations(id, limit, offset)
+    MsgSvc->>DB: 查询会话列表<br/>WHERE (id1=? OR id2=?)<br/>ORDER BY last_message_at DESC<br/>LIMIT 50 OFFSET 0
+    DB-->>MsgSvc: 返回会话列表
+    MsgSvc-->>Gateway: 返回会话列表
+    Gateway-->>Client: WebSocket 返回会话列表
 ```
 
-### 4. 接收离线消息
+### 5. 接收离线消息
 
 当用户上线时，系统会自动推送离线期间收到的未读消息。
 
@@ -417,8 +392,8 @@ sequenceDiagram
     
     Client->>Gateway: WebSocket 连接建立
     Gateway->>ConnMgr: RegisterConnection(userID, conn)
-    Gateway->>MsgSvc: gRPC: GetUnreadMessages(userID)
-    MsgSvc->>DB: 查询未读消息<br/>WHERE to_user_id=? AND status='unread'<br/>ORDER BY created_at ASC
+    Gateway->>MsgSvc: gRPC: GetUnreadMessages(id)
+    MsgSvc->>DB: 查询未读消息<br/>WHERE to_id=? AND status='unread'<br/>ORDER BY created_at ASC
     DB-->>MsgSvc: 返回未读消息列表
     MsgSvc-->>Gateway: 返回消息列表
     loop 每条消息
@@ -427,181 +402,44 @@ sequenceDiagram
     Gateway->>DB: 批量更新消息状态为已读
 ```
 
-#### 代码实现
-
-```go
-// internal/gateway/websocket/handler.go
-func (h *Handler) handleClient(conn *connection.Connection, userID string) {
-    // 注册连接后，立即推送离线消息
-    go h.pushOfflineMessages(conn, userID)
-    
-    // ... 处理其他消息
-}
-
-func (h *Handler) pushOfflineMessages(conn *connection.Connection, userID string) {
-    req := &pb.GetUnreadMessagesRequest{
-        UserID: userID,
-    }
-    
-    resp, err := h.messageService.GetUnreadMessages(context.Background(), req)
-    if err != nil {
-        log.Printf("Failed to get unread messages: %v", err)
-        return
-    }
-    
-    // 推送离线消息
-    for _, msg := range resp.Messages {
-        h.sendMessage(conn, Message{
-            Type: "message",
-            Data: map[string]interface{}{
-                "id":           msg.Id,
-                "type":         msg.Type,
-                "from_user_id": msg.FromUserID,
-                "to_user_id":   msg.ToUserID,
-                "content":      msg.Content,
-                "message_type": msg.MessageType,
-                "timestamp":    msg.Timestamp,
-            },
-        })
-    }
-    
-    // 标记为已读
-    if len(resp.Messages) > 0 {
-        messageIDs := make([]string, len(resp.Messages))
-        for i, msg := range resp.Messages {
-            messageIDs[i] = msg.Id
-        }
-        h.messageService.MarkAsRead(context.Background(), &pb.MarkAsReadRequest{
-            UserID:    userID,
-            MessageIDs: messageIDs,
-        })
-    }
-}
-```
-
-## 心跳机制
-
-为了保持 WebSocket 连接活跃，客户端需要定期发送心跳消息。
-
-### 心跳流程
+## Token 刷新流程
 
 ```mermaid
 sequenceDiagram
     participant Client as 客户端
     participant Gateway as WebSocket Gateway
-    participant Timer as 定时器
+    participant AuthSvc as Auth Service
+    participant Redis as Redis
     
-    Note over Client,Timer: 每30秒发送一次心跳
-    Client->>Gateway: WebSocket: {"type": "ping"}
-    Gateway->>Gateway: 更新连接最后活跃时间
-    Gateway-->>Client: WebSocket: {"type": "pong"}
-    
-    Note over Gateway,Timer: 如果60秒未收到心跳
-    Timer->>Gateway: 检测到连接超时
-    Gateway->>Gateway: 关闭连接
-    Gateway->>Gateway: 清理连接资源
+    Client->>Gateway: HTTP POST /api/v1/auth/refresh<br/>{refresh_token}
+    Gateway->>AuthSvc: gRPC: RefreshToken(refresh_token)
+    AuthSvc->>Redis: 验证 Refresh Token
+    alt Token 有效
+        AuthSvc->>AuthSvc: 生成新的 Access Token 和 Refresh Token
+        AuthSvc->>Redis: 更新 Token 缓存
+        AuthSvc-->>Gateway: 返回新的 Token
+        Gateway-->>Client: 返回新的 Token + Refresh Token
+    else Token 无效
+        AuthSvc-->>Gateway: 返回错误
+        Gateway-->>Client: 返回 401 Unauthorized
+    end
 ```
 
-#### 代码实现
+## Token 撤销流程
 
-```go
-// internal/gateway/websocket/handler.go
-func (h *Handler) handleClient(conn *connection.Connection, userID string) {
-    // 设置读取超时
-    conn.SetReadDeadline(time.Now().Add(60 * time.Second))
-    conn.SetPongHandler(func(string) error {
-        conn.SetReadDeadline(time.Now().Add(60 * time.Second))
-        return nil
-    })
+```mermaid
+sequenceDiagram
+    participant Client as 客户端
+    participant Gateway as WebSocket Gateway
+    participant AuthSvc as Auth Service
+    participant Redis as Redis
     
-    // 启动心跳检测
-    ticker := time.NewTicker(30 * time.Second)
-    defer ticker.Stop()
-    
-    go func() {
-        for {
-            select {
-            case <-ticker.C:
-                if err := conn.WriteMessage(websocket.PingMessage, nil); err != nil {
-                    return
-                }
-            }
-        }
-    }()
-    
-    for {
-        var msg Message
-        err := conn.ReadJSON(&msg)
-        if err != nil {
-            if websocket.IsUnexpectedCloseError(err, websocket.CloseGoingAway, websocket.CloseAbnormalClosure) {
-                log.Printf("WebSocket error: %v", err)
-            }
-            break
-        }
-        
-        // 重置读取超时
-        conn.SetReadDeadline(time.Now().Add(60 * time.Second))
-        
-        switch msg.Type {
-        case "ping":
-            h.handlePing(conn)
-        // ... 其他消息类型
-        }
-    }
-}
-
-func (h *Handler) handlePing(conn *connection.Connection) {
-    h.sendResponse(conn, Message{
-        Type: "pong",
-        Data: map[string]interface{}{
-            "timestamp": time.Now().Unix(),
-        },
-    })
-}
-```
-
-## 错误处理
-
-### 错误响应格式
-
-```json
-{
-    "type": "error",
-    "code": "INVALID_MESSAGE",
-    "message": "Invalid message format",
-    "timestamp": 1234567890
-}
-```
-
-### 常见错误码
-
-- `UNAUTHORIZED`: 未授权，Token 无效或过期
-- `INVALID_MESSAGE`: 消息格式错误
-- `USER_NOT_FOUND`: 目标用户不存在
-- `NOT_GROUP_MEMBER`: 不是群组成员
-- `MESSAGE_SEND_FAILED`: 消息发送失败
-- `RATE_LIMIT_EXCEEDED`: 请求频率过高
-
-### 错误处理实现
-
-```go
-// internal/gateway/websocket/handler.go
-func (h *Handler) sendError(conn *connection.Connection, code, message string) {
-    h.sendResponse(conn, Message{
-        Type: "error",
-        Data: map[string]interface{}{
-            "code":      code,
-            "message":   message,
-            "timestamp": time.Now().Unix(),
-        },
-    })
-}
-
-func (h *Handler) sendResponse(conn *connection.Connection, msg Message) {
-    if err := conn.WriteJSON(msg); err != nil {
-        log.Printf("Failed to send response: %v", err)
-    }
-}
+    Client->>Gateway: HTTP POST /api/v1/auth/revoke<br/>{token}
+    Gateway->>AuthSvc: gRPC: RevokeToken(token)
+    AuthSvc->>Redis: 将 Token 加入黑名单
+    AuthSvc->>Redis: 清除 Token 缓存
+    AuthSvc-->>Gateway: 返回成功
+    Gateway-->>Client: 返回成功
 ```
 
 ## 安全考虑
@@ -617,7 +455,14 @@ func (h *Handler) sendResponse(conn *connection.Connection, msg Message) {
 ## 性能优化
 
 1. **消息批量推送**：离线消息批量推送，减少网络请求
-2. **连接池管理**：使用连接池管理数据库连接
+2. **连接池管理**：使用连接池管理数据库连接和 gRPC 连接
 3. **消息缓存**：热点消息缓存到 Redis
 4. **异步处理**：消息发送异步处理，立即返回响应
 5. **负载均衡**：多个 Gateway 实例负载均衡，支持水平扩展
+6. **Token 缓存**：Token 验证结果缓存，减少 gRPC 调用
+
+## 参考
+
+- [微服务架构设计](./00-微服务架构设计.md)
+- [Auth 认证架构设计](./02-Auth认证架构设计.md)
+- [消息队列设计](./03-消息队列设计.md)
